team section with multi lang

--- a/index.html
+++ b/index.html
@@ -159,19 +159,22 @@
 			<div class="container">
 				<!-- section-header -->
 				<div class="section-header text-center">
-					<h2>Meet Our Dental Team</h2>
-					<p>Our experienced</p>
+					<h2 data-i18n="home.team.title">Meet Our Dental Team</h2>
+					<p data-i18n="home.team.subtitle">Our experienced dentists and staff are dedicated to providing you
+						with the highest quality care.</p>
 				</div>
 				<!-- team-grid -->
 				<div class="team-grid">
 					<!-- team-member -->
 					<div class="team-member">
-						<img src="assets/images/placeholder.svg" alt="">
+						<img src="assets/images/placeholder.svg" alt="Dr. Sarah Johnson" width="150" height="150">
 						<!-- team-info -->
 						<div class="team-info">
-							<h3>Doctor Sara</h3>
-							<p class="member-title">General Dantist</p>
-							<p class="member-bio">test</p>
+							<h3 data-i18n="home.team.teamInfo.dr1.name">Dr. Sarah Johnson</h3>
+							<p data-i18n="home.team.teamInfo.dr1.title" class="member-title">General Dentist</p>
+							<p data-i18n="home.team.teamInfo.dr1.bio" class="member-bio">Dr. Johnson has over 15 years
+								of experience in general and cosmetic
+								dentistry.</p>
 						</div>
 					</div>
 					<!-- team-member -->
@@ -179,9 +182,11 @@
 						<img src="assets/images/placeholder.svg" alt="">
 						<!-- team-info -->
 						<div class="team-info">
-							<h3>Doctor Sara</h3>
-							<p class="member-title">General Dantist</p>
-							<p class="member-bio">test</p>
+							<h3 data-i18n="home.team.teamInfo.dr2.name">Dr. Michael Chen</h3>
+							<p data-i18n="home.team.teamInfo.dr2.title" class="member-title">Orthodontist</p>
+							<p data-i18n="home.team.teamInfo.dr2.bio" class="member-bio">Dr. Chen specializes in
+								orthodontics and is an expert in Invisalign
+								treatments.</p>
 						</div>
 					</div>
 					<!-- team-member -->
@@ -189,17 +194,21 @@
 						<img src="assets/images/placeholder.svg" alt="">
 						<!-- team-info -->
 						<div class="team-info">
-							<h3>Doctor Sara</h3>
-							<p class="member-title">General Dantist</p>
-							<p class="member-bio">test</p>
+							<h3 data-i18n="home.team.teamInfo.dr3.name">Dr. Emily Rodriguez</h3>
+							<p data-i18n="home.team.teamInfo.dr3.title" class="member-title">Pediatric Dentist</p>
+							<p data-i18n="home.team.teamInfo.dr3.bio" class="member-bio">Dr. Rodriguez loves working
+								with children and making dental visits fun
+								and stress-free.</p>
 						</div>
 					</div>
 					<!-- team-member -->
 				</div>
 				<!-- text-center -->
 				<div class="text-center">
-					<a class="btn btn-outline" href="about.html">meet our full team <span
-							class="icon-right">→</span></a>
+					<a class="btn btn-outline" href="about.html">
+						<span data-i18n="home.team.meetFullTeam">Meet Our Full Team</span>
+						<span class="icon-right">→</span>
+					</a>
 				</div>
 			</div>
 		</section>
