testimonials section with multi lang

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 				</div>
 			</div>
 		</section>
-		<!-- Testimonial Section -->
+		<!-- testimonials-section -->
 		<section class="testimonials-section">
 			<!-- container -->
 			<div class="container">
@@ -220,11 +220,10 @@
 				<div class="grid-2-columns">
 					<!-- testimonials-content -->
 					<div class="testimonials-content">
-						<div class="badge">Testimonials</div>
-						<h2>What our Patients Say</h2>
+						<div data-i18n="home.testimonials.badge" class="badge">Testimonials</div>
+						<h2 data-i18n="home.testimonials.title">What our Patients Say</h2>
 						<div class="testimonials">
 							<div class="testimonial">
-
 								<div class="rating">
 									<span class="star">★</span>
 									<span class="star">★</span>
@@ -232,13 +231,13 @@
 									<span class="star">★</span>
 									<span class="star">★</span>
 								</div>
-								<div>
-									<p>"i ve been coming"</p>
-									<p class="author">- Jennifer L.</p>
-								</div>
+								<p data-i18n="home.testimonials.testimonialList.item1.text">I've been coming to
+									BrightSmile Dental for years, and I've always had a positive
+									experience. The staff is friendly, and Dr. Johnson is thorough and gentle.</p>
+								<p data-i18n="home.testimonials.testimonialList.item1.author" class="author">- Jennifer
+									L.</p>
 							</div>
 							<div class="testimonial">
-
 								<div class="rating">
 									<span class="star">★</span>
 									<span class="star">★</span>
@@ -246,24 +245,24 @@
 									<span class="star">★</span>
 									<span class="star">★</span>
 								</div>
-								<div>
-									<p>"i ve been coming"</p>
-									<p class="author">- Jennifer L.</p>
-								</div>
+								<p data-i18n="home.testimonials.testimonialList.item2.text">My kids love going to Dr.
+									Rodriguez! She makes them feel comfortable and explains
+									everything in a way they can understand. Highly recommend for families.</p>
+								<p data-i18n="home.testimonials.testimonialList.item2.author" class="author">- Mark T.
+								</p>
 							</div>
 						</div>
 					</div>
 					<!-- appointment-content -->
 					<div class="appointment-content">
 						<!-- badge -->
-						<div class="badge">Schedule a Visit</div>
-						<h2>Book Your Appointment</h2>
-						<p>We re accepting...</p>
+						<div data-i18n="home.appointment.badge" class="badge">Schedule a Visit</div>
+						<h2 data-i18n="home.appointment.title">Book Your Appointment</h2>
+						<p data-i18n="home.appointment.subtitle">We're accepting new patients! Schedule your appointment
+							online or give us a call.</p>
 						<!-- features -->
 						<div class="features">
-							<!-- feature -->
 							<div class="feature">
-								<!-- feature-icon -->
 								<div class="feature-icon">
 									<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
 										fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
@@ -275,46 +274,45 @@
 									</svg>
 								</div>
 								<div>
-									<h3>schaduling</h3>
-									<p>book online</p>
+									<h3 data-i18n="home.appointment.convenientScheduling.title">Convenient Scheduling
+									</h3>
+									<p data-i18n="home.appointment.convenientScheduling.description">Book online 24/7 or
+										call during office hours</p>
 								</div>
 							</div>
 							<div class="feature">
-								<!-- feature-icon -->
 								<div class="feature-icon">
 									<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
 										fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
 										stroke-linejoin="round" class="icon">
-										<rect width="18" height="18" x="3" y="4" rx="2" ry="2" />
-										<line x1="16" x2="16" y1="2" y2="6" />
-										<line x1="8" x2="8" y1="2" y2="6" />
-										<line x1="3" x2="21" y1="10" y2="10" />
+										<circle cx="12" cy="12" r="10" />
+										<polyline points="12 6 12 12 16 14" />
 									</svg>
 								</div>
 								<div>
-									<h3>schaduling</h3>
-									<p>book online</p>
+									<h3 data-i18n="home.appointment.extendedHours.title">Extended Hours</h3>
+									<p data-i18n="home.appointment.extendedHours.description">Open evenings and select
+										Saturdays for your convenience</p>
 								</div>
 							</div>
 							<div class="feature">
-								<!-- feature-icon -->
 								<div class="feature-icon">
 									<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
 										fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
 										stroke-linejoin="round" class="icon">
-										<rect width="18" height="18" x="3" y="4" rx="2" ry="2" />
-										<line x1="16" x2="16" y1="2" y2="6" />
-										<line x1="8" x2="8" y1="2" y2="6" />
-										<line x1="3" x2="21" y1="10" y2="10" />
+										<path d="M22 11.08V12a10 10 0 1 1-5.93-9.14" />
+										<polyline points="22 4 12 14.01 9 11.01" />
 									</svg>
 								</div>
 								<div>
-									<h3>schaduling</h3>
-									<p>book online</p>
+									<h3 data-i18n="home.appointment.insuranceAccepted.title">Insurance Accepted</h3>
+									<p data-i18n="home.appointment.insuranceAccepted.description">We work with most
+										major insurance providers</p>
 								</div>
 							</div>
-							<a href="#" class="btn btn-primary btn-block">Schedule now</a>
 						</div>
+						<a href="appointment.html" data-i18n="home.appointment.scheduleNow"
+							class="btn btn-primary btn-block">Schedule Now</a>
 					</div>
 				</div>
 			</div>
