--- a/index.html
+++ b/index.html
@@ -317,6 +317,7 @@
 				</div>
 			</div>
 		</section>
+		<!-- contact-section -->
 		<section class="contact-section">
 			<div class="container">
 				<div class="grid-2-columns">
