--- a/index.html
+++ b/index.html
@@ -322,8 +322,9 @@
 			<div class="container">
 				<div class="grid-2-columns">
 					<div class="contact-info">
-						<h2>Contact Us</h2>
-						<p>Have questions...</p>
+						<h2 data-i18n="home.contact.title">Contact Us</h2>
+						<p data-i18n="home.contact.subtitle">Have questions or ready to schedule? Reach out to our
+							friendly team.</p>
 						<div class="contact-details">
 							<div class="contact-item">
 								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -332,62 +333,61 @@
 									<path d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z" />
 									<circle cx="12" cy="10" r="3" />
 								</svg>
-
 								<div>
-									<p>Location</p>
-									<p>123 Dental way...</p>
+									<h3 data-i18n="home.contact.location.title">Location</h3>
+									<p data-i18n="home.contact.location.address">123 Dental Way, Cityville, ST 12345</p>
 								</div>
 							</div>
 							<div class="contact-item">
 								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
 									fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
 									stroke-linejoin="round" class="icon">
-									<path d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z" />
-									<circle cx="12" cy="10" r="3" />
+									<path
+										d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z" />
 								</svg>
-
 								<div>
-									<p>Location</p>
-									<p>123 Dental way...</p>
+									<h3 data-i18n="home.contact.phone.title">Phone</h3>
+									<p data-i18n="common.phone">(555) 123-4567</p>
 								</div>
 							</div>
 							<div class="contact-item">
 								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
 									fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
 									stroke-linejoin="round" class="icon">
-									<path d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z" />
-									<circle cx="12" cy="10" r="3" />
+									<circle cx="12" cy="12" r="10" />
+									<polyline points="12 6 12 12 16 14" />
 								</svg>
-
 								<div>
-									<p>Location</p>
-									<p>123 Dental way...</p>
+									<h3 data-i18n="home.contact.hours.title">Hours</h3>
+									<p data-i18n="home.contact.hours.weekdays">Monday-Friday: 8am-6pm</p>
+									<p data-i18n="home.contact.hours.saturday">Saturday: 9am-2pm (Select Dates)</p>
+									<p data-i18n="home.contact.hours.sunday">Sunday: Closed</p>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="contact-form">
 						<form id="home-contact-form">
-
 							<div class="form-row">
 								<div class="form-group">
-									<label for="">First name</label>
-									<input type="text">
+									<label data-i18n="home.contact.form.firstName" for="first-name">First name</label>
+									<input type="text" id="first-name" name="first-name">
 								</div>
 								<div class="form-group">
-									<label for="">Last name</label>
-									<input type="text">
+									<label data-i18n="home.contact.form.lastName" for="last-name">Last name</label>
+									<input type="text" id="last-name" name="last-name">
 								</div>
 							</div>
 							<div class="form-group">
-								<label for="">Email</label>
-								<input type="text">
+								<label data-i18n="home.contact.form.email" for="email">Email</label>
+								<input type="email" id="email" name="email">
 							</div>
 							<div class="form-group">
-								<label for="">Message</label>
-								<input type="text">
+								<label data-i18n="home.contact.form.message" for="message">Message</label>
+								<textarea id="message" name="message"></textarea>
 							</div>
-							<button class="btn btn-primary btn-block">Send massages</button>
+							<button data-i18n="home.contact.form.sendMessage" type="submit"
+								class="btn btn-primary btn-block">Send Message</button>
 						</form>
 					</div>
 				</div>
