--- a/contact.html
+++ b/contact.html
@@ -135,6 +135,19 @@
 			</div>
 			
 		</Section>	
+		<!-- map-section  -->
+		 <section>
+			<!-- container  -->
+			<div>
+				<!-- section-header  -->
+				<div>
+					<h3>Find Us</h3>
+					<p>and you will see</p>
+				</div>
+				<!-- map-container  -->
+				<div></div>
+			</div>
+		 </section>
 
 	</main>
 
