we did hero-section styling.

--- a/contact.html
+++ b/contact.html
@@ -22,15 +22,15 @@
 
 	<main class="main-content" id="main-content">
 		<!-- hero-section -->
-		<section>
+		<section class="hero-section">
 			<!-- container -->
-			<div>
+			<div class="container">
 				<!-- text-center -->
-				<div>
+				<div class="text-center">
 		
 					<h1>Contact Us</h1>
 					<!-- hero-subtitle  -->
-					<p>We are here to answer...</p>
+					<p class="hero-subtitle">We are here to answer...</p>
 				</div>
 			</div>
 		</section>
