--- a/services.html
+++ b/services.html
@@ -22,255 +22,315 @@
 
 	<main class="main-content" id="main-content">
 		<!-- hero-section -->
-    <section>
-		<!-- container -->
-		<div >
-			<!-- text-context -->
+		<section>
+			<!-- container -->
 			<div>
-				<h1>
-             Our dental servicies
-				</h1>
-				<p>
-            Dental care: good teeth.
-			   </p>
+				<!-- text-context -->
+				<div>
+					<h1>
+						Our dental servicies
+					</h1>
+					<p>
+						Dental care: good teeth.
+					</p>
+				</div>
 			</div>
-		</div>
-	</section>
-	<section>
-		<!-- container -->
-		<div>
-			<!-- grid-2-column -->
-        <div>
-			<!-- content -->
+		</section>
+		<section>
+			<!-- container -->
 			<div>
-				<!-- badge -->
+				<!-- grid-2-column -->
 				<div>
-					preventive care
-				</div>
-             <h2>
-             Maintain your smile
-			 </h2>
-			 <p>
-            good teeth
-			 </p>
-			 <!-- services-list -->
-			<div> 
-				<!-- service-item -->
-				<div>
-					<img src="" alt="" srcset=""> <p></p>
-				</div>
-				<div>
-					<img src="" alt="" srcset=""> <p></p>
-				</div>
-				<div>
-					<img src="" alt="" srcset=""> <p></p>
-				</div>
-				<div>
-					<img src="" alt="" srcset=""> <p></p>
-				</div>
-				<div>
-					<img src="" alt="" srcset=""> <p></p>
-				</div>
-			</div>
-			</div>
-			<!-- image -->
-			<div>
-				<img scr="" alt="" > 
-			</div>
-		</div>
-		</div>
-	</section>
-	<section>
-		<!-- container -->
-		<div>
-			<!-- grid-2-column -->
-        <div>
-			<!-- content -->
-			<div>
-				<!-- badge -->
-				<div>
-					preventive care
-				</div>
-             <h2>
-             Maintain your smile
-			 </h2>
-			 <p>
-            good teeth
-			 </p>
-			 <!-- services-list -->
-			<div> 
-				<!-- service-item -->
-				<div>
-					<img src="" alt="" srcset=""> <p></p>
-				</div>
-				<div>
-					<img src="" alt="" srcset=""> <p></p>
-				</div>
-				<div>
-					<img src="" alt="" srcset=""> <p></p>
-				</div>
-				<div>
-					<img src="" alt="" srcset=""> <p></p>
-				</div>
-				<div>
-					<img src="" alt="" srcset=""> <p></p>
-				</div>
-			</div>
-			</div>
-			<!-- image -->
-			<div>
-				<img scr="" alt="" > 
-			</div>
-		</div>
-		</div>
-	</section>
-	<section>
-		<!-- container -->
-		<div>
-			<!-- grid-2-column -->
-        <div>
-			<!-- content -->
-			<div>
-				<!-- badge -->
-				<div>
-					preventive care
-				</div>
-             <h2>
-             Maintain your smile
-			 </h2>
-			 <p>
-            good teeth
-			 </p>
-			 <!-- services-list -->
-			<div> 
-				<!-- service-item -->
-				<div>
-					<img src="" alt="" srcset=""> <p></p>
-				</div>
-				<div>
-					<img src="" alt="" srcset=""> <p></p>
-				</div>
-				<div>
-					<img src="" alt="" srcset=""> <p></p>
-				</div>
-				<div>
-					<img src="" alt="" srcset=""> <p></p>
-				</div>
-				<div>
-					<img src="" alt="" srcset=""> <p></p>
-				</div>
-			</div>
-			</div>
-			<!-- image -->
-			<div>
-				<img scr="" alt="" > 
-			</div>
-		</div>
-		</div>
-	</section>
-	<section> 
-		 	<!--container-->
-			<div> 
-				<!--Text_context-->
-				<div>
-					<h1></h1>
-					<p></p>
-				</div>
-			</div>
-			<!--2nd-container-->
-			<div>
-				<!--grid-3-column-->
-				<div>
-					<!--1st-column-->
+					<!-- content -->
 					<div>
-					<!--Text-context-->
-					<div>
-					    <h1></h1>
-						<p></p>
-						<p></p>
-					</div>
-						<!--button-->
-					<div>
-						<button></button>
-						<img src="" alt="" >
-					</div>
-					<!--2nd-column-->
-					<div>
-					<!--Text-context-->
-					<div>
-					    <h1></h1>
-						<p></p>
-						<p></p>
+						<!-- badge -->
+						<div>
+							preventive care
 						</div>
-						<!--button-->
+						<h2>
+							Maintain your smile
+						</h2>
+						<p>
+							good teeth
+						</p>
+						<!-- services-list -->
 						<div>
-						<button></button>
-						<img src="" alt="" >
-					</div>
-					<!--3rd-column-->
-					<div>
-						<!--Text-context-->
-						<div>
-					    <h1></h1>
-						<p></p>
-						<p></p>
-						</div>
-						<!--button-->
-						<div>
-						<button></button>
-						<img src="" alt="" >
+							<!-- service-item -->
+							<div>
+								<img src="" alt="" srcset="">
+								<p></p>
+							</div>
+							<div>
+								<img src="" alt="" srcset="">
+								<p></p>
+							</div>
+							<div>
+								<img src="" alt="" srcset="">
+								<p></p>
+							</div>
+							<div>
+								<img src="" alt="" srcset="">
+								<p></p>
+							</div>
+							<div>
+								<img src="" alt="" srcset="">
+								<p></p>
+							</div>
 						</div>
 					</div>
+					<!-- image -->
+					<div>
+						<img scr="" alt="">
+					</div>
 				</div>
 			</div>
-			<!--3rd-container-->
+		</section>
+		<section>
+			<!-- container -->
 			<div>
-				<!--grid-3-column-->
+				<!-- grid-2-column -->
 				<div>
-					<!--1st-column-->
+					<!-- content -->
 					<div>
-					<!--Text-context-->
-					<div>
-					    <h1></h1>
-						<p></p>
-						<p></p>
-					</div>
-						<!--button-->
-					<div>
-						<button></button>
-						<img src="" alt="" >
-					</div>
-					<!--2nd-column-->
-					<div>
-					<!--Text-context-->
-					<div>
-					    <h1></h1>
-						<p></p>
-						<p></p>
+						<!-- badge -->
+						<div>
+							preventive care
 						</div>
-						<!--button-->
+						<h2>
+							Maintain your smile
+						</h2>
+						<p>
+							good teeth
+						</p>
+						<!-- services-list -->
 						<div>
-						<button></button>
-						<img src="" alt="" >
-					</div>
-					<!--3rd-column-->
-					<div>
-						<!--Text-context-->
-						<div>
-					    <h1></h1>
-						<p></p>
-						<p></p>
+							<!-- service-item -->
+							<div>
+								<img src="" alt="" srcset="">
+								<p></p>
+							</div>
+							<div>
+								<img src="" alt="" srcset="">
+								<p></p>
+							</div>
+							<div>
+								<img src="" alt="" srcset="">
+								<p></p>
+							</div>
+							<div>
+								<img src="" alt="" srcset="">
+								<p></p>
+							</div>
+							<div>
+								<img src="" alt="" srcset="">
+								<p></p>
+							</div>
 						</div>
-						<!--button-->
+					</div>
+					<!-- image -->
+					<div>
+						<img scr="" alt="">
+					</div>
+				</div>
+			</div>
+		</section>
+		<section>
+			<!-- container -->
+			<div>
+				<!-- grid-2-column -->
+				<div>
+					<!-- content -->
+					<div>
+						<!-- badge -->
 						<div>
-						<button></button>
-						<img src="" alt="" >
+							preventive care
+						</div>
+						<h2>
+							Maintain your smile
+						</h2>
+						<p>
+							good teeth
+						</p>
+						<!-- services-list -->
+						<div>
+							<!-- service-item -->
+							<div>
+								<img src="" alt="" srcset="">
+								<p></p>
+							</div>
+							<div>
+								<img src="" alt="" srcset="">
+								<p></p>
+							</div>
+							<div>
+								<img src="" alt="" srcset="">
+								<p></p>
+							</div>
+							<div>
+								<img src="" alt="" srcset="">
+								<p></p>
+							</div>
+							<div>
+								<img src="" alt="" srcset="">
+								<p></p>
+							</div>
+						</div>
+					</div>
+					<!-- image -->
+					<div>
+						<img scr="" alt="">
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- specialized-section -->
+		<section>
+			<!--container-->
+			<div>
+				<!-- section-header text-center -->
+				<div>
+					<h2>Specialized Services</h2>
+					<p>We offer a range of specialized dental services to meet all your oral health needs.</p>
+				</div>
+
+				<!-- specialized-grid -->
+				<div>
+					<!-- service-card -->
+					<div>
+						<!-- card-header -->
+						<div>
+							<h3>Pediatric Dentistry</h3>
+							<p>Dental care for children of all ages</p>
+						</div>
+						<!-- card-content -->
+						<div>
+							<p>
+								Our pediatric dental services are designed to make dental visits fun and stress-free for
+								children, while providing the specialized care that growing smiles need.
+							</p>
+						</div>
+						<!-- card-footer -->
+						<div>
+							<a href="#">Learn More</a>
+						</div>
+					</div>
+					<!-- service-card -->
+					<div>
+						<!-- card-header -->
+						<div>
+							<h3>Pediatric Dentistry</h3>
+							<p>Dental care for children of all ages</p>
+						</div>
+						<!-- card-content -->
+						<div>
+							<p>
+								Our pediatric dental services are designed to make dental visits fun and stress-free for
+								children, while providing the specialized care that growing smiles need.
+							</p>
+						</div>
+						<!-- card-footer -->
+						<div>
+							<a href="#">Learn More</a>
+						</div>
+					</div>
+					<!-- service-card -->
+					<div>
+						<!-- card-header -->
+						<div>
+							<h3>Pediatric Dentistry</h3>
+							<p>Dental care for children of all ages</p>
+						</div>
+						<!-- card-content -->
+						<div>
+							<p>
+								Our pediatric dental services are designed to make dental visits fun and stress-free for
+								children, while providing the specialized care that growing smiles need.
+							</p>
+						</div>
+						<!-- card-footer -->
+						<div>
+							<a href="#">Learn More</a>
+						</div>
+					</div>
+					<!-- service-card -->
+					<div>
+						<!-- card-header -->
+						<div>
+							<h3>Pediatric Dentistry</h3>
+							<p>Dental care for children of all ages</p>
+						</div>
+						<!-- card-content -->
+						<div>
+							<p>
+								Our pediatric dental services are designed to make dental visits fun and stress-free for
+								children, while providing the specialized care that growing smiles need.
+							</p>
+						</div>
+						<!-- card-footer -->
+						<div>
+							<a href="#">Learn More</a>
+						</div>
+					</div>
+					<!-- service-card -->
+					<div>
+						<!-- card-header -->
+						<div>
+							<h3>Pediatric Dentistry</h3>
+							<p>Dental care for children of all ages</p>
+						</div>
+						<!-- card-content -->
+						<div>
+							<p>
+								Our pediatric dental services are designed to make dental visits fun and stress-free for
+								children, while providing the specialized care that growing smiles need.
+							</p>
+						</div>
+						<!-- card-footer -->
+						<div>
+							<a href="#">Learn More</a>
+						</div>
+					</div>
+					<!-- service-card -->
+					<div>
+						<!-- card-header -->
+						<div>
+							<h3>Pediatric Dentistry</h3>
+							<p>Dental care for children of all ages</p>
+						</div>
+						<!-- card-content -->
+						<div>
+							<p>
+								Our pediatric dental services are designed to make dental visits fun and stress-free for
+								children, while providing the specialized care that growing smiles need.
+							</p>
+						</div>
+						<!-- card-footer -->
+						<div>
+							<a href="#">Learn More</a>
+						</div>
+					</div>
+					<!-- service-card -->
+					<div>
+						<!-- card-header -->
+						<div>
+							<h3>Pediatric Dentistry</h3>
+							<p>Dental care for children of all ages</p>
+						</div>
+						<!-- card-content -->
+						<div>
+							<p>
+								Our pediatric dental services are designed to make dental visits fun and stress-free for
+								children, while providing the specialized care that growing smiles need.
+							</p>
+						</div>
+						<!-- card-footer -->
+						<div>
+							<a href="#">Learn More</a>
 						</div>
 					</div>
 				</div>
 			</div>
-			
-	</section>
+		</section>
 	</main>
 
 	<!-- Footer will be injected by JavaScript -->
