made changes. Take a look!

--- a/services.html
+++ b/services.html
@@ -331,6 +331,50 @@
 				</div>
 			</div>
 		</section>
+		<!-- insurance-section -->
+		<section>
+			<!--container-->
+			<div>
+				<!--section-header text-center -->
+				<div>
+					<h2>Insurance & Financing</h2>
+					<p>
+						We work with most major insurance providers and offer flexible financing options.
+					</p>
+				</div>
+				<!-- insurance-grid -->
+				<div>
+					<!-- insurance-card -->
+					<div>
+						<h3>Insurance</h3>
+						<p>
+							We accept most major dental insurance plans and are in-network with many providers. Our team
+							will help you maximize your benefits.
+						</p>
+					</div>
+					<!-- insurance-card -->
+					<div>
+						<h3>Insurance</h3>
+						<p>
+							We accept most major dental insurance plans and are in-network with many providers. Our team
+							will help you maximize your benefits.
+						</p>
+					</div>
+					<!-- insurance-card -->
+					<div>
+						<h3>Insurance</h3>
+						<p>
+							We accept most major dental insurance plans and are in-network with many providers. Our team
+							will help you maximize your benefits.
+						</p>
+					</div>
+				</div>
+				<!-- text-center -->
+				<div>
+					<a href="#">Contact Us for More Information</a>
+				</div>
+			</div>
+		</section>
 	</main>
 
 	<!-- Footer will be injected by JavaScript -->
