added about page styling.

--- a/about.html
+++ b/about.html
@@ -22,195 +22,261 @@
 
 	<main class="main-content" id="main-content">
 		<!-- hero-section -->
-<section>
-	<!-- container -->
-	<div>
-		<!-- text-center -->
-		<div>
-			<h1>About Dentilur</h1>
-			<p>Template Dentilur</p>
-		</div>
-	</div>
-
-</section>
-
-<!-- story-section  -->
-<section>
-	<!-- container  -->
-	<div>
-		<!-- Grid-2-Columns  -->
-		<div>
-			<img src="" alt="">
-			<!-- Content  -->
-			<div>
-				<h2>
-					Our Story
-				</h2>
-				<p> </p>
-				<p> </p>
-				<p> </p>
-			</div>
-		</div>
-	</div>
-</section>
-<!-- Team section  -->
-<section>
-	<!-- container  -->
-	<div>
-		<!-- section header text-center  -->
-      <div>
-		<h2>Our Team</h2>
-		<p>Meet The Dedicated Team</p>
-	  </div>
-	   <!-- Team-grid  -->
-		<div>
-			<!-- Team-member  -->
-			<div>
-				<img src=""  alt="">
-				 <!-- member-info  -->
-				<div>
-					<h3>Dr1</h3>
-					<!-- member-title  -->
-					<p>Dr1 Position</p>
-					<!-- member bio  -->
-					<p>Dr1 Description</p>
+		<section class="hero-section">
+			<div class="container">
+				<div class="text-center">
+					<h1 data-i18n="about.hero.title">About BrightSmile Dental</h1>
+					<p class="hero-subtitle" data-i18n="about.hero.subtitle">
+						Providing exceptional dental care to our community for over 20 years.
+					</p>
 				</div>
 			</div>
-			<div>
-				<img src=""  alt="">
-				<div>
-					<h3>Dr2</h3>
-					<p>Dr2 Position</p>
-					<p>Dr2 Description</p>
+		</section>
+		<!-- story-section  -->
+		<section class="story-section">
+			<div class="container">
+				<div class="grid-2-columns items-center">
+					<img src="assets/images/placeholder.svg" alt="Our dental office" width="600" height="400"
+						class="rounded-img">
+					<div class="content">
+						<h2 data-i18n="about.story.title">Our Story</h2>
+						<p data-i18n="about.story.content1">
+							BrightSmile Dental was founded in 2003 by Dr. Sarah Johnson with a simple mission: to
+							provide high-quality, compassionate dental care to patients of all ages. What started as a
+							small practice has grown into a trusted dental care provider in our community.
+						</p>
+						<p data-i18n="about.story.content2">
+							Our team of experienced dentists, hygienists, and staff are dedicated to making your dental
+							experience as comfortable and stress-free as possible. We believe in building long-term
+							relationships with our patients based on trust, respect, and exceptional care.
+						</p>
+						<p data-i18n="about.story.content3">
+							At BrightSmile Dental, we stay at the forefront of dental technology and techniques to
+							ensure you receive the most effective and comfortable treatments available.
+						</p>
+					</div>
 				</div>
 			</div>
-			<div>
-				<img src=""  alt="">
-				<div>
-					<h3>Dr3</h3>
-					<p>Dr3 Position</p>
-					<p>Dr3 Description</p>
+		</section>
+		<!-- Team section  -->
+		<section class="team-section">
+			<div class="container">
+				<div class="section-header text-center">
+					<h2 data-i18n="about.team.title">Our Team</h2>
+					<p data-i18n="about.team.subtitle">
+						Meet the dedicated professionals who make BrightSmile Dental special.
+					</p>
 				</div>
-			</div>
-		</div>
-	</div>
-</section>
-<!-- mission Section  -->
-<section>
-	<!-- container  -->
-	<div>
-		<!-- grid-2-columns -->
-		<div>
-			<!-- content  -->
-			<div>
-				<h2>Our Mission And Values</h2>
-				<p>Magaliti</p>
-				<!-- values  -->
-				<div>
-					<!-- value-item  -->
-					<div>
-						<!-- value-icon  -->
-						<div>
-
-							<img src="" alt="">
-						</div>
-						<div>
-							<h3>Rame</h3>
-							<p>Paragraph 3</p>
+				<div class="team-grid">
+					<div class="team-member">
+						<img src="assets/images/placeholder.svg" alt="Dr. Sarah Johnson" width="200" height="200">
+						<div class="member-info">
+							<h3>Dr. Sarah Johnson</h3>
+							<p class="member-title">General Dentist, Founder</p>
+							<p class="member-bio">
+								Dr. Johnson has over 15 years of experience in general and cosmetic dentistry. She
+								earned her Doctor of Dental Surgery degree from the University of Michigan.
+							</p>
 						</div>
 					</div>
-					<!-- value-item  -->
-					<div>
-						<!-- value-icon  -->
-						<div>
-
-							<img src="" alt="">
-						</div>
-						<div>
-							<h3>Rame</h3>
-							<p>Paragraph 3</p>
-						</div>
-					</div>
-					<!-- value-item  -->
-					<div>
-						<!-- value-icon  -->
-						<div>
-
-							<img src="" alt="">
-						</div>
-						<div>
-							<h3>Rame</h3>
-							<p>Paragraph 3</p>
+					<div class="team-member">
+						<img src="assets/images/placeholder.svg" alt="Dr. Michael Chen" width="200" height="200">
+						<div class="member-info">
+							<h3>Dr. Michael Chen</h3>
+							<p class="member-title">Orthodontist</p>
+							<p class="member-bio">
+								Dr. Chen specializes in orthodontics and is an expert in Invisalign treatments. He
+								completed his orthodontic residency at NYU.
+							</p>
 						</div>
 					</div>
-					<!-- value-item  -->
-					<div>
-						<!-- value-icon  -->
-						<div>
-
-							<img src="" alt="">
+					<div class="team-member">
+						<img src="assets/images/placeholder.svg" alt="Dr. Emily Rodriguez" width="200" height="200">
+						<div class="member-info">
+							<h3>Dr. Emily Rodriguez</h3>
+							<p class="member-title">Pediatric Dentist</p>
+							<p class="member-bio">
+								Dr. Rodriguez loves working with children and making dental visits fun and stress-free.
+								She received her specialty training in pediatric dentistry from Boston Children's
+								Hospital.
+							</p>
 						</div>
-						<div>
-							<h3>Rame</h3>
-							<p>Paragraph 3</p>
+					</div>
+					<div class="team-member">
+						<img src="assets/images/placeholder.svg" alt="Dr. James Wilson" width="200" height="200">
+						<div class="member-info">
+							<h3>Dr. James Wilson</h3>
+							<p class="member-title">Periodontist</p>
+							<p class="member-bio">
+								Dr. Wilson specializes in the prevention, diagnosis, and treatment of periodontal
+								disease and dental implants. He has been practicing for over 10 years.
+							</p>
+						</div>
+					</div>
+					<div class="team-member">
+						<img src="assets/images/placeholder.svg" alt="Lisa Thompson" width="200" height="200">
+						<div class="member-info">
+							<h3>Lisa Thompson</h3>
+							<p class="member-title">Dental Hygienist</p>
+							<p class="member-bio">
+								Lisa has been with BrightSmile Dental for 8 years. She is passionate about preventive
+								care and patient education.
+							</p>
+						</div>
+					</div>
+					<div class="team-member">
+						<img src="assets/images/placeholder.svg" alt="Robert Garcia" width="200" height="200">
+						<div class="member-info">
+							<h3>Robert Garcia</h3>
+							<p class="member-title">Office Manager</p>
+							<p class="member-bio">
+								Robert ensures our office runs smoothly and efficiently. He's always ready to help with
+								scheduling, insurance questions, and more.
+							</p>
 						</div>
 					</div>
 				</div>
-
 			</div>
-			<img src="" alt="">
-		</div>
-	</div>
-</section>
-<!-- Facility Section  -->
- <section>
-	<!-- Container  -->
-	<div>
-		<!-- Section-Header  -->
-		<div>
-			<h2>Our Facility</h2>
-			<p>Our Modern Dental Office</p>
-		</div>
-		<!-- Facility-Grid  -->
-		<div>
-			<!-- Facility-Item  -->
-			<div>
-				<img src="" alt="">
-				<h3>Welcome</h3>
-				<p>Our Comfortable </p>
-			</div>
-			<!-- Facility-Item  -->
-			<div>
-				<img src="" alt="">
-				<h3>Welcome</h3>
-				<p>Our Comfortable </p>
-			</div>
-			<!-- Facility-Item  -->
-			<div>
-				<img src="" alt="">
-				<h3>Welcome</h3>
-				<p>Our Comfortable </p>
-			</div>
-		</div>
-	</div>
- </section>
-   <!-- cta section  -->
-    <section>
-		<!-- container  -->
-		<div>
-			<!-- text-center  -->
-			<div>
-				<h2>Ready To Schedule?</h2>
-				<p>Expecting new patients</p>
-				<!-- cta-buttons  -->
-				<div>
-					<a href="">Book Appointment</a>
-					<a href="">Contact Us</a>
+		</section>
+		<!-- mission Section  -->
+		<section class="mission-section">
+			<div class="container">
+				<div class="grid-2-columns items-center">
+					<div class="content">
+						<h2 data-i18n="about.mission.title">Our Mission & Values</h2>
+						<p data-i18n="about.mission.content">
+							At BrightSmile Dental, our mission is to improve the oral health of our community by
+							providing comprehensive, personalized dental care in a comfortable and welcoming
+							environment.
+						</p>
+						<div class="values">
+							<div class="value-item">
+								<div class="value-icon">
+									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+										stroke="currentColor" stroke-width="2" stroke-linecap="round"
+										stroke-linejoin="round" class="icon">
+										<path d="m5 12 5 5L20 7" />
+									</svg>
+								</div>
+								<div>
+									<h3 data-i18n="about.mission.values.excellence.title">Excellence</h3>
+									<p data-i18n="about.mission.values.excellence.description">
+										We strive for excellence in all aspects of our practice, from clinical care to
+										customer service.
+									</p>
+								</div>
+							</div>
+							<div class="value-item">
+								<div class="value-icon">
+									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+										stroke="currentColor" stroke-width="2" stroke-linecap="round"
+										stroke-linejoin="round" class="icon">
+										<path d="m5 12 5 5L20 7" />
+									</svg>
+								</div>
+								<div>
+									<h3 data-i18n="about.mission.values.compassion.title">Compassion</h3>
+									<p data-i18n="about.mission.values.compassion.description">
+										We treat each patient with kindness, empathy, and respect, understanding that
+										dental visits can be stressful for many.
+									</p>
+								</div>
+							</div>
+							<div class="value-item">
+								<div class="value-icon">
+									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+										stroke="currentColor" stroke-width="2" stroke-linecap="round"
+										stroke-linejoin="round" class="icon">
+										<path d="m5 12 5 5L20 7" />
+									</svg>
+								</div>
+								<div>
+									<h3 data-i18n="about.mission.values.education.title">Education</h3>
+									<p data-i18n="about.mission.values.education.description">
+										We believe in empowering our patients with knowledge about their oral health so
+										they can make informed decisions.
+									</p>
+								</div>
+							</div>
+							<div class="value-item">
+								<div class="value-icon">
+									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+										stroke="currentColor" stroke-width="2" stroke-linecap="round"
+										stroke-linejoin="round" class="icon">
+										<path d="m5 12 5 5L20 7" />
+									</svg>
+								</div>
+								<div>
+									<h3 data-i18n="about.mission.values.innovation.title">Innovation</h3>
+									<p data-i18n="about.mission.values.innovation.description">
+										We continuously invest in advanced technology and techniques to provide the best
+										possible care.
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<img src="assets/images/placeholder.svg" alt="Our dental team in action" width="600" height="400"
+						class="rounded-img">
 				</div>
 			</div>
-		</div>
-	</section>
-</main>
+		</section>
+		<!-- Facility Section  -->
+		<section class="facility-section">
+			<div class="container">
+				<div class="section-header text-center">
+					<h2 data-i18n="about.facility.title">Our Facility</h2>
+					<p data-i18n="about.facility.subtitle">
+						Our modern dental office is designed with your comfort in mind.
+					</p>
+				</div>
+				<div class="facility-grid">
+					<div class="facility-item">
+						<img src="assets/images/placeholder.svg" alt="Reception area" width="400" height="300"
+							class="rounded-img">
+						<h3>Welcoming Reception</h3>
+						<p>
+							Our comfortable reception area is designed to make you feel at home from the moment you
+							arrive.
+						</p>
+					</div>
+					<div class="facility-item">
+						<img src="assets/images/placeholder.svg" alt="Treatment room" width="400" height="300"
+							class="rounded-img">
+						<h3>Modern Treatment Rooms</h3>
+						<p>
+							Our treatment rooms are equipped with the latest technology for efficient and comfortable
+							care.
+						</p>
+					</div>
+					<div class="facility-item">
+						<img src="assets/images/placeholder.svg" alt="Digital imaging equipment" width="400"
+							height="300" class="rounded-img">
+						<h3>Advanced Technology</h3>
+						<p>
+							We use digital imaging and other advanced tools for accurate diagnosis and treatment
+							planning.
+						</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- cta section  -->
+		<section class="cta-section">
+			<div class="container">
+				<div class="text-center">
+					<h2 data-i18n="about.cta.title">Ready to Schedule?</h2>
+					<p data-i18n="about.cta.subtitle">
+						We're accepting new patients and would love to welcome you to our dental family.
+					</p>
+					<div class="cta-buttons">
+						<a href="appointment.html" class="btn btn-primary">Book an Appointment</a>
+						<a href="contact.html" class="btn btn-outline">Contact Us <span class="icon-right">→</span></a>
+					</div>
+				</div>
+			</div>
+		</section>
+	</main>
 
 	<!-- Footer will be injected by JavaScript -->
 	<footer id="site-footer" class="site-footer"></footer>
