--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="assets/css/global.css">
 	<link rel="stylesheet" href="assets/css/components.css">
+	<link rel="stylesheet" href="assets/css/js-components.css">
 	<link rel="stylesheet" href="assets/css/pages/home.css">
+	<link rel="stylesheet" href="assets/css/pages/about.css">
+	<link rel="stylesheet" href="assets/css/pages/services.css">
+	<link rel="stylesheet" href="assets/css/pages/appointment.css">
+	<link rel="stylesheet" href="assets/css/pages/contact.css">
 
 	<!-- Favicon -->
 	<link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
