added images, also css links on each page and Edited text

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 					</div>
 					<!-- hero-image -->
 					<div class="hero-image">
-						<img src="assets/images/placeholder.svg" alt="dental team with patient" width="550"
-							height="550">
+						<img src="assets/images/hero/dental-team-with-patient.png" alt="dental team with patient"
+							width="550" height="550">
 
 					</div>
 				</div>
@@ -237,7 +237,7 @@
 									<span class="star">★</span>
 								</div>
 								<p data-i18n="home.testimonials.testimonialList.item1.text">I've been coming to
-									BrightSmile Dental for years, and I've always had a positive
+									Dentiluri for years, and I've always had a positive
 									experience. The staff is friendly, and Dr. Johnson is thorough and gentle.</p>
 								<p data-i18n="home.testimonials.testimonialList.item1.author" class="author">- Jennifer
 									L.</p>
