--- a/about.html
+++ b/about.html
@@ -10,7 +10,12 @@
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="assets/css/global.css">
 	<link rel="stylesheet" href="assets/css/components.css">
+	<link rel="stylesheet" href="assets/css/js-components.css">
+	<link rel="stylesheet" href="assets/css/pages/home.css">
 	<link rel="stylesheet" href="assets/css/pages/about.css">
+	<link rel="stylesheet" href="assets/css/pages/services.css">
+	<link rel="stylesheet" href="assets/css/pages/appointment.css">
+	<link rel="stylesheet" href="assets/css/pages/contact.css">
 
 	<!-- Favicon -->
 	<link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
@@ -25,7 +30,7 @@
 		<section class="hero-section">
 			<div class="container">
 				<div class="text-center">
-					<h1 data-i18n="about.hero.title">About BrightSmile Dental</h1>
+					<h1 data-i18n="about.hero.title">About Dentiluri</h1>
 					<p class="hero-subtitle" data-i18n="about.hero.subtitle">
 						Providing exceptional dental care to our community for over 20 years.
 					</p>
@@ -36,12 +41,12 @@
 		<section class="story-section">
 			<div class="container">
 				<div class="grid-2-columns items-center">
-					<img src="assets/images/placeholder.svg" alt="Our dental office" width="600" height="400"
-						class="rounded-img">
+					<img src="assets/images/facility/our-dental-office.jpeg" alt="Our dental office" width="600"
+						height="400" class="rounded-img">
 					<div class="content">
 						<h2 data-i18n="about.story.title">Our Story</h2>
 						<p data-i18n="about.story.content1">
-							BrightSmile Dental was founded in 2003 by Dr. Sarah Johnson with a simple mission: to
+							Dentiluri was founded in 2003 by Dr. Sarah Johnson with a simple mission: to
 							provide high-quality, compassionate dental care to patients of all ages. What started as a
 							small practice has grown into a trusted dental care provider in our community.
 						</p>
@@ -51,7 +56,7 @@
 							relationships with our patients based on trust, respect, and exceptional care.
 						</p>
 						<p data-i18n="about.story.content3">
-							At BrightSmile Dental, we stay at the forefront of dental technology and techniques to
+							At Dentiluri, we stay at the forefront of dental technology and techniques to
 							ensure you receive the most effective and comfortable treatments available.
 						</p>
 					</div>
@@ -64,7 +69,7 @@
 				<div class="section-header text-center">
 					<h2 data-i18n="about.team.title">Our Team</h2>
 					<p data-i18n="about.team.subtitle">
-						Meet the dedicated professionals who make BrightSmile Dental special.
+						Meet the dedicated professionals who make Dentiluri special.
 					</p>
 				</div>
 				<div class="team-grid">
@@ -119,7 +124,7 @@
 							<h3>Lisa Thompson</h3>
 							<p class="member-title">Dental Hygienist</p>
 							<p class="member-bio">
-								Lisa has been with BrightSmile Dental for 8 years. She is passionate about preventive
+								Lisa has been with Dentiluri for 8 years. She is passionate about preventive
 								care and patient education.
 							</p>
 						</div>
@@ -145,7 +150,7 @@
 					<div class="content">
 						<h2 data-i18n="about.mission.title">Our Mission & Values</h2>
 						<p data-i18n="about.mission.content">
-							At BrightSmile Dental, our mission is to improve the oral health of our community by
+							At Dentiluri, our mission is to improve the oral health of our community by
 							providing comprehensive, personalized dental care in a comfortable and welcoming
 							environment.
 						</p>
@@ -216,8 +221,8 @@
 							</div>
 						</div>
 					</div>
-					<img src="assets/images/placeholder.svg" alt="Our dental team in action" width="600" height="400"
-						class="rounded-img">
+					<img src="assets/images/hero/our-dental-team-in-action.jpg" alt="Our dental team in action"
+						width="600" height="400" class="rounded-img">
 				</div>
 			</div>
 		</section>
@@ -232,8 +237,8 @@
 				</div>
 				<div class="facility-grid">
 					<div class="facility-item">
-						<img src="assets/images/placeholder.svg" alt="Reception area" width="400" height="300"
-							class="rounded-img">
+						<img src="assets/images/facility/welcoming-reception.jpeg" alt="Reception area" width="400"
+							height="300" class="rounded-img">
 						<h3>Welcoming Reception</h3>
 						<p>
 							Our comfortable reception area is designed to make you feel at home from the moment you
@@ -241,8 +246,8 @@
 						</p>
 					</div>
 					<div class="facility-item">
-						<img src="assets/images/placeholder.svg" alt="Treatment room" width="400" height="300"
-							class="rounded-img">
+						<img src="assets/images/facility/modern-treatment-rooms.jpeg" alt="Treatment room" width="400"
+							height="300" class="rounded-img">
 						<h3>Modern Treatment Rooms</h3>
 						<p>
 							Our treatment rooms are equipped with the latest technology for efficient and comfortable
@@ -250,8 +255,8 @@
 						</p>
 					</div>
 					<div class="facility-item">
-						<img src="assets/images/placeholder.svg" alt="Digital imaging equipment" width="400"
-							height="300" class="rounded-img">
+						<img src="assets/images/facility/advanced-technology.jpeg" alt="Digital imaging equipment"
+							width="400" height="300" class="rounded-img">
 						<h3>Advanced Technology</h3>
 						<p>
 							We use digital imaging and other advanced tools for accurate diagnosis and treatment
