--- a/services.html
+++ b/services.html
@@ -10,7 +10,12 @@
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="assets/css/global.css">
 	<link rel="stylesheet" href="assets/css/components.css">
+	<link rel="stylesheet" href="assets/css/js-components.css">
+	<link rel="stylesheet" href="assets/css/pages/home.css">
+	<link rel="stylesheet" href="assets/css/pages/about.css">
 	<link rel="stylesheet" href="assets/css/pages/services.css">
+	<link rel="stylesheet" href="assets/css/pages/appointment.css">
+	<link rel="stylesheet" href="assets/css/pages/contact.css">
 
 	<!-- Favicon -->
 	<link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
@@ -106,7 +111,7 @@
 							</div>
 						</div>
 					</div>
-					<img src="assets/images/placeholder.svg" alt="Dental cleaning" width="600" height="400"
+					<img src="assets/images/hero/dental-cleaning.jpg" alt="Dental cleaning" width="600" height="400"
 						class="rounded-img">
 				</div>
 			</div>
@@ -115,8 +120,8 @@
 		<section class="service-section alt-section">
 			<div class="container">
 				<div class="grid-2-columns items-center">
-					<img src="assets/images/placeholder.svg" alt="Cosmetic dentistry" width="600" height="400"
-						class="rounded-img order-last">
+					<img src="assets/images/hero/cosmetic-dentistry.jpg" alt="Cosmetic dentistry" width="600"
+						height="400" class="rounded-img order-last">
 					<div class="content">
 						<div class="badge" data-i18n="services.cosmetic.badge">Cosmetic Dentistry</div>
 						<h2 data-i18n="services.cosmetic.title">Enhance Your Smile</h2>
@@ -265,8 +270,8 @@
 							</div>
 						</div>
 					</div>
-					<img src="assets/images/placeholder.svg" alt="Dental restoration" width="600" height="400"
-						class="rounded-img">
+					<img src="assets/images/hero/cosmetic-dentistry.jpg" alt="Dental restoration" width="600"
+						height="400" class="rounded-img">
 				</div>
 			</div>
 		</section>
