Change "Book an Appointment" with "Call Now", also removed few Contact Us Sections

--- a/about.html
+++ b/about.html
@@ -275,8 +275,11 @@
 						We're accepting new patients and would love to welcome you to our dental family.
 					</p>
 					<div class="cta-buttons">
-						<a href="appointment.html" class="btn btn-primary">Book an Appointment</a>
-						<a href="contact.html" class="btn btn-outline">Contact Us <span class="icon-right">→</span></a>
+						<a data-i18n="about.cta.callNow" class="btn btn-primary">Call Now</a>
+						<a href="contact.html" class="btn btn-outline">
+							<span data-i18n="about.cta.contactUs">Contact Us</span>
+							<span class="icon-right">→</span>
+						</a>
 					</div>
 				</div>
 			</div>
