--- a/contact.html
+++ b/contact.html
@@ -162,30 +162,28 @@
 							<div class="form-row">
 								<div class="form-group">
 									<label for="first-name" data-i18n="contact.form.firstName">First name</label>
-									<input type="text" id="first-name" name="first-name" placeholder="John" required>
+									<input type="text" id="first-name" name="first-name" required>
 								</div>
 								<div class="form-group">
 									<label for="last-name" data-i18n="contact.form.lastName">Last name</label>
-									<input type="text" id="last-name" name="last-name" placeholder="Doe" required>
+									<input type="text" id="last-name" name="last-name" required>
 								</div>
 							</div>
 							<div class="form-group">
 								<label for="email" data-i18n="contact.form.email">Email</label>
-								<input type="email" id="email" name="email" placeholder="john.doe@example.com" required>
+								<input type="email" id="email" name="email" required>
 							</div>
 							<div class="form-group">
 								<label for="phone" data-i18n="contact.form.phone">Phone</label>
-								<input type="tel" id="phone" name="phone" placeholder="(555) 123-4567">
+								<input type="tel" id="phone" name="phone">
 							</div>
 							<div class="form-group">
 								<label for="subject" data-i18n="contact.form.subject">Subject</label>
-								<input type="text" id="subject" name="subject" placeholder="How can we help you?"
-									required>
+								<input type="text" id="subject" name="subject" required>
 							</div>
 							<div class="form-group">
 								<label for="message" data-i18n="contact.form.message">Message</label>
-								<textarea id="message" name="message"
-									placeholder="Please provide details about your inquiry..." required></textarea>
+								<textarea id="message" name="message" required></textarea>
 							</div>
 							<button type="submit" class="btn btn-primary btn-block"
 								data-i18n="contact.form.sendMessage">Send Message</button>
@@ -211,25 +209,6 @@
 				</div>
 			</div>
 		</section>
-		<!-- cta-section -->
-		<section class="cta-section">
-			<div class="container">
-				<div class="text-center">
-					<h2 data-i18n="contact.cta.title">Ready to Schedule?</h2>
-					<p data-i18n="contact.cta.subtitle">
-						Book your appointment today and take the first step toward a healthier smile.
-					</p>
-					<div class="cta-buttons">
-						<a href="appointment.html" class="btn btn-primary">Book an Appointment</a>
-						<a href="tel:5551234567" class="btn btn-outline">
-							Call Us Now
-							<span class="icon-right">→</span>
-						</a>
-					</div>
-				</div>
-			</div>
-		</section>
-
 	</main>
 
 	<!-- Footer will be injected by JavaScript -->
