--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						</div>
 						<!-- hero-buttons -->
 						<div class="hero-buttons">
-							<a href="#" class="btn btn-primary" data-i18n="home.hero.btn1">Book an Appointment</a>
+							<a class="btn btn-primary" data-i18n="home.hero.btn1">Call Now</a>
 							<a href="services.html" class="btn btn-outline" data-i18n="home.hero.btn2">Our Services</a>
 						</div>
 					</div>
@@ -316,8 +316,7 @@
 								</div>
 							</div>
 						</div>
-						<a href="appointment.html" data-i18n="home.appointment.scheduleNow"
-							class="btn btn-primary btn-block">Schedule Now</a>
+						<a data-i18n="home.appointment.callNow" class="btn btn-primary btn-block">Call Now</a>
 					</div>
 				</div>
 			</div>
