--- a/services.html
+++ b/services.html
@@ -429,27 +429,9 @@
 				</div>
 				<div class="text-center">
 					<a href="contact.html" class="btn btn-outline">
-						Contact Us for More Information
+						<span data-i18n="services.insurance.moreInfo">Contact Us for More Information</span>
 						<span class="icon-right">→</span>
 					</a>
-				</div>
-			</div>
-		</section>
-		<!-- cta-section -->
-		<section class="cta-section alt-section">
-			<div class="container">
-				<div class="text-center">
-					<h2 data-i18n="services.cta.title">Ready to Schedule?</h2>
-					<p data-i18n="services.cta.subtitle">
-						Book your appointment today and take the first step toward a healthier smile.
-					</p>
-					<div class="cta-buttons">
-						<a href="appointment.html" class="btn btn-primary">Book an Appointment</a>
-						<a href="contact.html" class="btn btn-outline">
-							Contact Us
-							<span class="icon-right">→</span>
-						</a>
-					</div>
 				</div>
 			</div>
 		</section>
