Correction: Phone, Address, Work Hours

--- a/index.html
+++ b/index.html
@@ -338,7 +338,8 @@
 								</svg>
 								<div>
 									<h3 data-i18n="home.contact.location.title">Location</h3>
-									<p data-i18n="home.contact.location.address">123 Dental Way, Cityville, ST 12345</p>
+									<p data-i18n="home.contact.location.address">Varketili Zemo Plateau II
+										Micro/District, Building 25</p>
 								</div>
 							</div>
 							<div class="contact-item">
@@ -350,7 +351,8 @@
 								</svg>
 								<div>
 									<h3 data-i18n="home.contact.phone.title">Phone</h3>
-									<p data-i18n="common.phone">(555) 123-4567</p>
+									<p data-i18n="common.phone">032 2 060 786</p>
+									<p data-i18n="common.phone2">555 602 500</p>
 								</div>
 							</div>
 							<div class="contact-item">
