--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,8 @@
 								</div>
 								<div>
 									<h3 data-i18n="contact.info.phone.title">Phone</h3>
-									<p data-i18n="contact.info.phone.number">(555) 123-4567</p>
+									<p data-i18n="contact.info.phone.number">032 2 060 786</p>
+									<p data-i18n="contact.info.phone.number2">555 602 500</p>
 									<p data-i18n="contact.info.phone.detail">Call us during office hours to speak with
 										our team.</p>
 								</div>
@@ -202,9 +203,9 @@
 				</div>
 				<div class="map-container">
 					<iframe
-						src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6125.970197267647!2d44.8763984974978!3d41.69435368783461!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40440decf7dc11a3%3A0x1a11924ea8e446c2!2s25%2C%20T&#39;bilisi!5e0!3m2!1sen!2sge!4v1748678597607!5m2!1sen!2sge"
-						width="100%" height="100%" style="border:0;" allowfullscreen loading="lazy"
-						referrerpolicy="no-referrer-when-downgrade" title="Location map of Dentiluri Clinic"></iframe>
+						src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d8037.938138751128!2d44.87171469853541!3d41.69405085240213!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40440d002e36d337%3A0xa29aff3536ffad76!2sDentiluri!5e0!3m2!1sen!2sge!4v1749411236829!5m2!1sen!2sge"
+						width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
+						referrerpolicy="no-referrer-when-downgrade"></iframe>
 				</div>
 			</div>
 		</section>
